--- a/diary_app/diary_app/android/app/src/main/AndroidManifest.xml
+++ b/diary_app/diary_app/android/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:value="2" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6870262376730402~2741959854" />
+            android:value="ca-app-pub-" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
